k8s/base/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: beown-backend-service
spec:
  type: ClusterIP
  selector:
    app: beown-backend
  ports:
    - port: 8080
      targetPort: 8080
